@@ -1,5 +1,11 @@
 2010-01-06  Tobias C. Rittweiler  <tcr@freebits.de>
 
+	* slime-autodoc.el (slime-check-autodoc-at-point): Bind
+	`slime-autodoc-use-multiline-p' to nil for normalized test
+	results.
+
+2010-01-06  Tobias C. Rittweiler  <tcr@freebits.de>
+
 	* swank-arglists.lisp (extract-cursor-marker): Make sure to
 	recurse only if the form, to be recursed into, is a cons.
 
